Update to enforce ordering.